--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     tools:context="org.cryfintra.cryfintra.EditFragment">
 
-    <!-- TODO: Update blank fragment layout -->
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton_add"
@@ -19,4 +18,11 @@
         android:layout_marginRight="16dp"
         android:clickable="true"
         android:src="@android:drawable/ic_menu_add" />
+
+    <ListView
+        android:id="@+id/listViewEditCurrencies"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/background_light" />
+
 </FrameLayout>
