--- a/app/src/main/res/layout/activity_add_currency.xml
+++ b/app/src/main/res/layout/activity_add_currency.xml
@@ -89,4 +89,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_editCurrency"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/preset_currency"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toTopOf="@+id/textView_Amount"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_currency" />
 </android.support.constraint.ConstraintLayout>
