--- a/app/src/main/res/layout/coin_item_list_row.xml
+++ b/app/src/main/res/layout/coin_item_list_row.xml
@@ -12,7 +12,7 @@ tools:context="org.cryfintra.cryfintra.ListViewCoinCursorAdapter">
 
 </TableLayout>
 
-    <TextView
+    <ImageView
         android:id="@+id/adapter_icon"
         android:layout_width="64dp"
         android:layout_height="wrap_content"
