--- a/app/src/main/res/layout/coin_item_list_row.xml
+++ b/app/src/main/res/layout/coin_item_list_row.xml
@@ -6,50 +6,50 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context="org.cryfintra.cryfintra.ListViewCoinCursorAdapter">
 
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content" android:orientation="vertical"
-    android:layout_width="fill_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-</TableLayout>
+        <ImageView
+            android:id="@+id/adapter_icon"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_weight="1"
+            android:height="60sp"
+            android:gravity="left"
+            android:textColor="@android:color/black"
+            android:typeface="monospace" />
 
-    <ImageView
-        android:id="@+id/adapter_icon"
-        android:layout_width="64dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:height="60sp"
-        android:gravity="left"
-        android:textColor="@android:color/black"
-        android:typeface="monospace" />
+        <TextView
+            android:id="@+id/adapter_coin"
+            android:layout_width="180dp"
+            android:layout_height="64dp"
+            android:layout_weight="1"
+            android:height="60sp"
+            android:gravity="center_vertical"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/adapter_icon"
+            tools:layout_editor_absoluteY="0dp" />
 
-    <TextView
-        android:id="@+id/adapter_coin"
-        android:layout_width="177dp"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:height="60sp"
-        android:gravity="center_vertical"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/adapter_icon"
-        tools:layout_editor_absoluteY="0dp" />
-
-    <TextView
-        android:id="@+id/adapter_value"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_weight="1"
-        android:height="60sp"
-        android:gravity="right|center_vertical"
-        android:textColor="@android:color/holo_green_dark"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/adapter_coin"
-        tools:layout_editor_absoluteY="0dp" />
+        <TextView
+            android:id="@+id/adapter_value"
+            android:layout_width="100dp"
+            android:layout_height="64dp"
+            android:layout_marginEnd="8dp"
+            android:layout_weight="1"
+            android:height="60sp"
+            android:gravity="right|center_vertical"
+            android:textColor="@android:color/holo_green_dark"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/adapter_coin"
+            tools:layout_editor_absoluteY="0dp" />
+    </LinearLayout>
 
 
 </android.support.constraint.ConstraintLayout>
